@@ -1,3 +1,13 @@
+2006-10-17  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_load),
+	(ephy_spinner_cache_get_images), (ephy_spinner_get_type),
+	(ephy_spinner_init), (ephy_spinner_new):
+	* lib/widgets/ephy-spinner.h:
+
+	Fix a crash after failing to get the spinner animation or rest icons.
+	Derive EphySpinner from GtkWidget not GtkEventBox.
+
 2006-10-15  Jean-François Rameau  <jframeau@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmarks.c: (update_has_smart_address):
